--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy", rev = "94db0176fecfac7e7e9763f2dc7458a54c105886" }
 rand = "0.8.4"
-#
-#[dependencies.shaderc-sys]
-#features = ["build-from-source"]
+structopt = "0.3"
+
+[dependencies.bevy]
+git = "https://github.com/bevyengine/bevy"
+rev = "94db0176fecfac7e7e9763f2dc7458a54c105886"
