--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,7 @@ edition = "2021"
 [dependencies]
 ron = "0.7.0"
 structopt = "0.3"
-
-[dependencies.bevy]
-git = "https://github.com/bevyengine/bevy"
-rev = "d353fbc6ea9e0c4fa69fc3b8e646e1ce79fbbc16"
+bevy = "0.8"
 
 [dependencies.chrono]
 version = "0.4.19"
