--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 ron = "0.8.1"
-structopt = "0.3"
+clap = { version = "4", features = [ "derive" ] }
 bevy = "0.15"
 
 [dependencies.chrono]
