--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 ron = "0.8.1"
 clap = { version = "4", features = [ "derive" ] }
-bevy = "0.15"
+bevy = { version = "0.15", features = [ "trace" ] }
 
 [dependencies.chrono]
 version = "0.4.19"
